    source package to a given directory, optionally specifying a particular
    version.
  * backends/packaging-apt-dpkg.py: Implement get_source_tree(). This has a
    rather crude 'call apt-get source and guess about directories'
    implementation until python-apt learns about doing this directly and more
    elegantly (see LP #118788).

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 05 Jun 2007 17:42:15 +0200

apport (0.81) gutsy; urgency=low

  * apport/report.py: Remove '[apport]' default bug title prefix. (LP: #94819)
  * apport/crashdb_impl/launchpad.py: Tag new bugs with
    'apport-<problemtype>'. This replaces the former '[apport]' prefixing.
  * debian/local/setup-apport-retracer: Specify a path in '.' command and
    use sh again. Yay for me needing three attempts before actually RTFMing
    how '.' works (which is really nasty and strange IMHO).
  * bin/apport-chroot: Fix symlinks before repackaging the chroot tarball in
    'install' and 'installdeb' modes.
  * debian/local/setup-apport-retracer: Install python-libxml2 and python-apt.
  * bin/launchpad-crash-digger: Supply --auth instead of the deprecated
    --cookie to apport-chroot.
  * bin/apport-chroot: Fix identifier name in command_retrace().
  * debian/local/setup-apport-retracer: Set APPORT_CRASHDB_CONF to the local
    crashdb.conf.
  * bin/apport-chroot: Unset APPORT_CRASHDB_CONF for login and retrace.
  * bin/launchpad-crash-digger: Check the release of a bug and whether we have
    a chroot for it before untagging it. This avoids loosing tags for bugs we
    do not yet have a working retracer chroot for.
  * bin/apport-retrace: Do not abort with an exception if package installation
    fails. Give a proper error message instead and point to -u. (LP: #115681)
  * apport/crashdb_impl/launchpad.py, update(): Create a temporary directory
    and use proper file names for the new attachments. With TemporaryFile(),
    attachment file names ended up as '<fdopen>'. (LP: #115347)